Pepper: Account for DPI scaling for damage of SetLayerTransform.

Bug: 785801
Change-Id: I0bcc31cc9f90205d1c5c0181f25394f48f845605
Reviewed-on: https://chromium-review.googlesource.com/780180
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Kevin McNee <mcnee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518252}
Former-commit-id: a140876f4c9377e89a8e23b57face1a141325085